フレームワークコーディング

--- a/framework/assets/css/headline.css
+++ b/framework/assets/css/headline.css
@@ -217,4 +217,4 @@
 
 .webp .title-site {
   background-image: url("../../assets/img/s_site_title.webp");
-}/*# sourceMappingURL=headline.css.map */
+}
