フレームワーク

--- a/framework/assets/css/common.css
+++ b/framework/assets/css/common.css
@@ -104,7 +104,7 @@
   background-color: #F3EBCF !important;
 }
 .bg_light_beige {
-  background-color: #FBF8EF !important;
+  background-color: #FFF8E1 !important;
 }
 .brown {
   background-color: #C1A342 !important;
