--- a/framework/assets/css/style.css
+++ b/framework/assets/css/style.css
@@ -402,3 +402,30 @@
 .overflow-x-auto::-webkit-scrollbar {
   display: none; /* Chrome/Safariでスクロールバー非表示 */
 }
+
+/* 真ん中にラインが入った見出しスタイル */
+.centerline_heading {
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+.centerline_heading h3 {
+  display: inline-block;
+  position: relative;
+  padding: 0 2em; /* 見出し文字の左右スペース */
+  background: #fff;
+  z-index: 1;
+}
+
+.centerline_heading::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #222222; 
+  z-index: 0;
+  transform: translateY(-50%);
+}
