--- a/framework/assets/css/desktop/header.scss
+++ b/framework/assets/css/desktop/header.scss
@@ -1,5 +1,5 @@
 @charset "UTF-8";
 
 @media screen and (min-width: 992px) {
-  .change-color {background-color: #d2d7fbdb;}
+  .change-color {background-color: #1d447d;}
 }
