--- a/framework/assets/css/desktop/header.css
+++ b/framework/assets/css/desktop/header.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 992px) {
   .change-color {
-    background-color: rgba(210, 215, 251, 0.8588235294);
+    background-color: #1d447d;
   }
-}
+}/*# sourceMappingURL=header.css.map */
