--- a/ルビコン_theme/assets/css/header.scss
+++ b/ルビコン_theme/assets/css/header.scss
@@ -14,7 +14,7 @@
   }
 }
 .navbar-collapse.show {
-  background-color: #fff;
+  background-color: #1E447D;
   padding: 10px 20px 30px;
   position: relative;
   // top: -46px;
@@ -31,5 +31,6 @@
 //   filter: invert(1); 
 // }
 .header-nav.bg-white-on {
-    background-color: #fff !important;
+    background-color: #1E447D !important;
 }
+
