--- a/ルビコン_theme/assets/css/style.scss
+++ b/ルビコン_theme/assets/css/style.scss
@@ -159,6 +159,13 @@
 .border-bottom-white-1px{
   border-bottom: solid 1px #ffffff;
 }
+.border_lightblue_1px {
+   border: solid 1px #2C8EE4;
+}
+
+.accordion-item:not(:first-of-type) {
+    border-top: 1px;
+}
 
 // 未使用
 .border-bottom-brown-dotted{
@@ -600,3 +607,40 @@
 .text-shadow_black{
   text-shadow: 1px 1px 5px #1d1d1d;
 }
+
+
+.overflow-x-auto {
+  -webkit-overflow-scrolling: touch;
+  scrollbar-width: none; 
+}
+.overflow-x-auto::-webkit-scrollbar {
+  display: none; 
+}
+
+
+.comparison-table {
+  width: 100%;
+  max-width: 100%;
+  table-layout: fixed;
+  border-collapse: collapse;
+}
+
+.comparison-table a {
+  word-break: break-all;
+}
+
+@media (max-width: 768px) {
+  .comparison-table .text-nowrap {
+    white-space: normal !important;
+  }
+  .comparison-table .w35-25 {
+    width: auto !important;
+  }
+}
+
+
+// * {
+//   outline: 2px solid blue;
+// }
+
+
