--- a/ルビコン_theme/assets/css/desktop/style.scss
+++ b/ルビコン_theme/assets/css/desktop/style.scss
@@ -2,6 +2,12 @@
 
 
 @media screen and (min-width: 992px) {
+  .height-40-lg{
+   height: 40px !important;
+  }
+  .height-80-lg{
+   height: 80px !important;
+  }
 
   // .mt-lg-80{
   //   margin-top: 80px !important;
