--- a/ルビコン_theme/assets/css/style.scss
+++ b/ルビコン_theme/assets/css/style.scss
@@ -282,6 +282,9 @@
 .height-100{
   height: 100px;
 }
+.height-150{
+  height: 150px;
+}
 
 // .rounded-top-20{
 //   border-radius: 20px 20px 0px 0 ;
@@ -637,6 +640,13 @@
     width: auto !important;
   }
 }
+@media (max-width: 991px) {
+  .fs-sm-18px{
+    font-size: 18px !important;
+  }
+}
+
+
 
 
 // * {
