--- a/ルビコン_theme/assets/css/common.css
+++ b/ルビコン_theme/assets/css/common.css
@@ -46,6 +46,9 @@
 .yellow {
   color: #F7CE00 !important;
 }
+.gray{
+  color: #303030 !important;
+}
 
 
 /*------------------------------------- */
