--- a/ルビコン_theme/assets/css/desktop/headline.scss
+++ b/ルビコン_theme/assets/css/desktop/headline.scss
@@ -9,53 +9,53 @@
 
 // タイトル
 
-@media screen and (min-width: 992px) {
-  .title-reccomend {
-    height: 200px;
-    background-image: url('../../../assets/img/s_reccomend_title.png'); 
-  }
-  .webp .title-reccomend {
-  background-image: url('../../../assets/img/s_reccomend_title.webp');
-}
-  .title-check {
-    background-image: url('../../../assets/img/s_check_title.png');
-    height: 200px;
-  }
-  .webp .title-check {
-    background-image: url('../../../assets/img/s_check_title.webp');
-  }
-  .title-point {
-    height: 120px;
-  }
-  .title-company {
-    height: 200px;
-    background-image: url('../../../assets/img/s_company_title.png');
-  }
-  .webp .title-company {
-  background-image: url('../../../assets/img/s_company_title.webp');
-}
-  .title-sdbrew {
-    height: 200px;
-  }
-  .title-avan {
-    height: 200px;
-  }
-  .title-tokunaga {
-    height: 200px;
-  }
-  .title-faq {
-    height: 180px;
-  }
-  .title-list {
-    height: 150px;
-  }
-  .title-area {
-    height: 150px;
-  }
-  .title-articles {
-    height: 100px;
-  }
-  .title-site {
-    height: 100px;
-  }
-}
+// @media screen and (min-width: 992px) {
+//   .title-reccomend {
+//     height: 200px;
+//     background-image: url('../../../assets/img/s_reccomend_title.png'); 
+//   }
+//   .webp .title-reccomend {
+//   background-image: url('../../../assets/img/s_reccomend_title.webp');
+// }
+//   .title-check {
+//     background-image: url('../../../assets/img/s_check_title.png');
+//     height: 200px;
+//   }
+//   .webp .title-check {
+//     background-image: url('../../../assets/img/s_check_title.webp');
+//   }
+//   .title-point {
+//     height: 120px;
+//   }
+//   .title-company {
+//     height: 200px;
+//     background-image: url('../../../assets/img/s_company_title.png');
+//   }
+//   .webp .title-company {
+//   background-image: url('../../../assets/img/s_company_title.webp');
+// }
+//   .title-sdbrew {
+//     height: 200px;
+//   }
+//   .title-avan {
+//     height: 200px;
+//   }
+//   .title-tokunaga {
+//     height: 200px;
+//   }
+//   .title-faq {
+//     height: 180px;
+//   }
+//   .title-list {
+//     height: 150px;
+//   }
+//   .title-area {
+//     height: 150px;
+//   }
+//   .title-articles {
+//     height: 100px;
+//   }
+//   .title-site {
+//     height: 100px;
+//   }
+// }
