--- a/ルビコン_theme/assets/css/desktop/style.css
+++ b/ルビコン_theme/assets/css/desktop/style.css
@@ -6,5 +6,8 @@
   .height-80-lg {
     height: 80px !important;
   }
+  .comparison-table .w35-25 {
+    width: 22% !important;
+  }
   /*高さ*/
 }/*# sourceMappingURL=style.css.map */
