--- a/ルビコン_theme/assets/css/desktop/style.scss
+++ b/ルビコン_theme/assets/css/desktop/style.scss
@@ -9,6 +9,10 @@
    height: 80px !important;
   }
 
+  .comparison-table .w35-25 {
+    width: 22% !important;
+  }
+
   // .mt-lg-80{
   //   margin-top: 80px !important;
   // }
