--- a/ルビコン_theme/assets/css/style.scss
+++ b/ルビコン_theme/assets/css/style.scss
@@ -636,16 +636,18 @@
   .comparison-table .text-nowrap {
     white-space: normal !important;
   }
-  .comparison-table .w35-25 {
-    width: auto !important;
-  }
+  
 }
+
 @media (max-width: 991px) {
   .fs-sm-18px{
     font-size: 18px !important;
   }
 }
 
+.comparison-table .w35-25 {
+    width: 25% !important;
+  }
 
 
 
