--- a/ルビコン_theme/assets/css/blog.scss
+++ b/ルビコン_theme/assets/css/blog.scss
@@ -192,7 +192,13 @@ $lite-green:#E0F4F3;
     width: 100%;
 }
 
+#blog table {
+  width: 100%;
+  table-layout: fixed;
+}
+
 #blog table td {
-border: solid #222222 1px;
-padding: 10px;
+  width: 50%;
+  border: solid #222222 1px;
+  padding: 10px;
 }
