--- a/ルビコン_theme/assets/css/blog.css
+++ b/ルビコン_theme/assets/css/blog.css
@@ -179,8 +179,9 @@
 }
 
 #blog table td {
-  width: 50%;
   border: solid #222222 1px;
   padding: 10px;
+  word-break: break-word;
+  overflow-wrap: anywhere;
 }
 /*# sourceMappingURL=blog.css.map */
