--- a/ルビコン_theme/assets/css/blog.css
+++ b/ルビコン_theme/assets/css/blog.css
@@ -172,7 +172,12 @@
   padding: 30px;
   width: 100%;
 }
-
+@media (max-width: 768px) {
+.breadcrumb-item{
+  font-size: 13px;  
+  line-height: 1.1rem !important;
+  }
+}
 #blog table {
   width: 100%;
   table-layout: fixed;
