--- a/ルビコン_theme/assets/css/style.scss
+++ b/ルビコン_theme/assets/css/style.scss
@@ -53,7 +53,15 @@
   margin-left: 10px;
   vertical-align: middle;
 }
-
+@media (max-width: 768px) {
+  .fv_subTitle p {
+    font-size: 13px !important;
+    line-height: 1.2 !important;
+  }
+  .fv_subTitle p:first-child::after {
+    height: 0.5px;
+  }
+}
 .bg-sub {
   background-size: cover;
   background-repeat: no-repeat;
@@ -647,6 +655,11 @@
     width: 25% !important;
   }
 
+@media (max-width: 768px) {
+  .header-sm-pt-6 {
+    padding-top: 6rem !important;
+  }
+}
 
 
 // * {
